# WebDocx

./: .gitignore  README.md  compose.yaml
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  entities.py
backend/app/routers/: __init__.py  auth.py  documents.py  onlyoffice.py
backend/app/schemas/: __init__.py  auth.py  documents.py
backend/app/services/: __init__.py  documents.py  onlyoffice.py  storage.py
backend/app/tests/: conftest.py  test_auth.py  test_documents.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: globals.d.ts  index.css  main.tsx  router.tsx
frontend/src/components/: compare-dialog.tsx  document-card.tsx  history-drawer.tsx  onlyoffice-editor.tsx  share-dialog.tsx
frontend/src/lib/: api.ts  session.tsx  types.ts  utils.ts
frontend/src/pages/: editor-page.tsx  login-page.tsx  workspace-page.tsx
infra/: Caddyfile
